# orbytal

./: .gitignore  justfile  pyproject.toml  setup.cfg
docs/source/: conf.py
src/orbytal/: core.py
tests/data/: 47TucT.csv  J0514-40.csv
