[metadata]
name = orbytal
license = MIT License
license_file = LICENSE
author = "Ujjwal Panda"
author_email = "ujjwalpanda97@gmail.com"
long_description_content_type = text/markdown
description = "Fit for binary pulsar orbits, fast and easy."
long_description = file: README.md, CHANGELOG.md, CONTRIBUTING.md

project_urls = 
    Home Page     = https://github.com/astrogewgaw/orbytal
    Source Code   = https://github.com/astrogewgaw/orbytal
    Documentation = https://orbytal.readthedocs.io/en/latest
    Bug Reports   = https://github.com/astrogewgaw/orbytal/issues

classifiers =
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find:
package_dir = =src
use_scm_version = True
python_requires = >=3.6
install_requires = numpy
include_package_data = True
setup_requires = setuptools_scm


[options.packages.find]
where=src
